<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9ff"
    android:padding="5dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <EditText
            android:id="@+id/QueryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:ems="10"
            android:hint="@string/queryhint"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:textSize="18sp" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/TagEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:hint="@string/taghint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/save" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal" >

        <TextView
            android:id="@+id/TaggedSearchesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="2"
            android:padding="5dp"
            android:text="@string/taggedtext"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/teal" >

        <ScrollView
            android:id="@+id/QueryScrollView"
            android:layout_width="match_parent"
            android:layout_span="2"
            android:padding="5dp" >

            <TableLayout
                android:id="@+id/QueryTableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:stretchColumns="*" >
            </TableLayout>
        </ScrollView>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ClearTagsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearbutton"
            android:layout_span="2"
            android:layout_marginTop="5dp" />

    </TableRow>

</TableLayout>
